--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+     
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- High-resolution Touch Icon (PWA / iOS) -->
+    <link rel="apple-touch-icon" sizes="512x512" href="/logo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Travores</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
